--- a/HW_2/HW_2.ipynb
+++ b/HW_2/HW_2.ipynb
@@ -46,9 +46,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# question 1 driver:\n",
     "from lagrange_interpolation import LagrangeInterpolant\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import math\n",
     "\n",
     "def get_uniform_nodes(n: int):\n",
     "    # get x and y from function:\n",
@@ -99,10 +101,56 @@
     "    plt.savefig(\"{0}_plot_for_q1.png\".format(phrase))\n",
     "    plt.figure()\n",
     "\n",
+    "def get_nodes_factor_for_x(x, nodes):\n",
+    "    factor = 1\n",
+    "    for i in range(len(nodes)):\n",
+    "        factor *= (x - nodes[i])\n",
+    "    return np.abs(factor)\n",
     "\n",
-    "# actually execute the code:\n",
+    "def plot_nodes_factor(chebyshev):\n",
+    "    for n in [6, 10, 14]:\n",
+    "        if chebyshev:\n",
+    "            x_list, _ = get_chebyshev_nodes(n)\n",
+    "        else:\n",
+    "            x_list, _ = get_uniform_nodes(n)\n",
+    "        x_axis = np.linspace(x_list[0], x_list[-1], 400)\n",
+    "        factor_values = []\n",
+    "        for x in np.nditer(x_axis):\n",
+    "            factor_values.append(get_nodes_factor_for_x(x, x_list))\n",
+    "        plt.plot(x_axis, factor_values, label=\"Factor for n = {0}\".format(n))\n",
+    "    plt.show()\n",
+    "    \n",
+    "def get_max_error_direct(n, chebyshev):\n",
+    "    if chebyshev:\n",
+    "        x_list, y_list = get_chebyshev_nodes(n)\n",
+    "    else:\n",
+    "        x_list, y_list = get_uniform_nodes(n)\n",
+    "    lagrange_interpolant = LagrangeInterpolant(x_list, y_list)\n",
+    "    x_vals_to_test = np.linspace(x_list[0], x_list[-1], 10**6)\n",
+    "    max = 0\n",
+    "    for x in np.nditer(x_vals_to_test):\n",
+    "        f_val = 1 / (1 + 25 * x**2)\n",
+    "        error = np.abs(lagrange_interpolant.evaluate(x) - f_val)\n",
+    "        if error > max:\n",
+    "            max = error\n",
+    "    return max\n",
+    "    \n",
+    "\n",
+    "\n",
+    "# generate plots:\n",
     "generate_plots(False)\n",
-    "generate_plots(True)"
+    "generate_plots(True)\n",
+    "\n",
+    "# get uniform max error for various n:\n",
+    "print(\"uniform:\")\n",
+    "print(get_max_error_direct(6, False))\n",
+    "print(get_max_error_direct(10, False))\n",
+    "print(get_max_error_direct(14, False))\n",
+    "\n",
+    "print(\"chebyshev:\")\n",
+    "print(get_max_error_direct(6, True))\n",
+    "print(get_max_error_direct(10, True))\n",
+    "print(get_max_error_direct(14, True))"
    ]
   },
   {
@@ -126,7 +174,8 @@
     "        M = 1\n",
     "    truncation_err = (M * h) / 2\n",
     "    round_off_err = (2 * epsilon) / h\n",
-    "    tot_err = truncation_err + round_off_err\n",
+    "    approximation = (f(1 + h) - f(1)) / h\n",
+    "    tot_err = np.abs(approximation - np.cos(1))\n",
     "    return truncation_err, round_off_err, tot_err\n",
     "\n",
     "def plot(min_n, max_n, epsilon):\n",
@@ -143,8 +192,6 @@
     "    plt.plot(n_values, truncation_errs, label=\"Truncation error\")\n",
     "    plt.plot(n_values, round_off_errs, label=\"Roundoff error\")\n",
     "    plt.plot(n_values, tot_errs, label=\"Total error\")\n",
-    "    h_opt = np.log10(np.sqrt((4 * epsilon) / np.sin(1)))\n",
-    "    plt.axvline(h_opt, label=\"Optimal step size\", color=\"red\")\n",
     "    plt.yscale('log')\n",
     "    plt.legend()\n",
     "    plt.xlabel(\"x\")\n",
@@ -172,6 +219,10 @@
     "        return factor_1 * factor_2\n",
     "\n",
     "    @staticmethod\n",
+    "    def right_rectangle_rule(f, x_0, x_1):\n",
+    "        return (x_1 - x_0) * f(x_1)\n",
+    "\n",
+    "    @staticmethod\n",
     "    def integrate_composite(f, x_0, x_1, quadrature_rule, granularity, open = False):\n",
     "        if not open:\n",
     "            points = np.linspace(x_0, x_1, granularity + 1)\n",
@@ -189,6 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# question 3 driver\n",
     "from integration import Integrator\n",
     "import numpy as np\n",
     "\n",
@@ -200,18 +252,19 @@
     "    return factor_1 * factor_2\n",
     "\n",
     "#a\n",
-    "print(Integrator.integrate_composite(f, -sigma, sigma, Integrator.simpson, 10**6))\n",
+    "print(Integrator.integrate_composite(f, -sigma, sigma, Integrator.right_rectangle_rule, 10**7))\n",
     "#b\n",
-    "print(Integrator.integrate_composite(f, -2 * sigma, 2 * sigma, Integrator.simpson, 10**6))\n",
+    "print(Integrator.integrate_composite(f, -2 * sigma, 2 * sigma, Integrator.right_rectangle_rule, 10**7))\n",
     "#c\n",
-    "print(Integrator.integrate_composite(f, -3 * sigma, 3 * sigma, Integrator.simpson, 10**6))\n",
+    "print(Integrator.integrate_composite(f, -3 * sigma, 3 * sigma, Integrator.right_rectangle_rule, 10**7))\n",
     "\n",
     "# 3.2:\n",
     "def g(x):\n",
     "    y = 9 * (np.sin(x))**2 + 4 * (np.cos(x))**2\n",
     "    return np.sqrt(y)\n",
     "\n",
-    "print(Integrator.integrate_composite(g, 0, 2 * np.pi, Integrator.simpson, 10**6))"
+    "# this may take a while, but less than 30 minutes on my device:\n",
+    "print(Integrator.integrate_composite(g, 0, 2 * np.pi, Integrator.right_rectangle_rule, 10**8))"
    ]
   }
  ],
