--- a/HW_2/HW_2.ipynb
+++ b/HW_2/HW_2.ipynb
@@ -47,7 +47,6 @@
    "outputs": [],
    "source": [
     "# question 1 driver:\n",
-    "from lagrange_interpolation import LagrangeInterpolant\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import math\n",
@@ -194,8 +193,8 @@
     "    plt.plot(n_values, tot_errs, label=\"Total error\")\n",
     "    plt.yscale('log')\n",
     "    plt.legend()\n",
-    "    plt.xlabel(\"x\")\n",
-    "    plt.ylabel(\"y\")\n",
+    "    plt.xlabel(\"n\")\n",
+    "    plt.ylabel(\"error\")\n",
     "\n",
     "    plt.savefig(\"diff_plot.png\")\n",
     "\n",
@@ -241,7 +240,6 @@
    "outputs": [],
    "source": [
     "# question 3 driver\n",
-    "from integration import Integrator\n",
     "import numpy as np\n",
     "\n",
     "# 3.1:\n",
